test/good/dictionaries/comprehension04.px

print {if 0 == 0 yield "qr": 1}
print {if false for _ in 1... yield true: true}
