test/bad/basic/cmp2.px

if 1 == 0 == false:
    skip
